--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.4.3",
+    "bootstrap": "4.6.1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
