--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/ujs": "^6.1.5",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "4.6.1",
+    "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
