fix: 本番環境用のDBの設定を修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: sales_calendar_production
-  username: sales_calendar
-  password: <%= ENV['SALES_CALENDAR_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
