--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -9,59 +9,59 @@
 # Offense count: 3
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: AllowForAlignment, AllowBeforeTrailingComments, ForceEqualSignAlignment.
-Layout/ExtraSpacing:
-  Exclude:
-    - 'db/migrate/20220118085641_sorcery_core.rb'
-    - 'db/migrate/20220118092847_create_scores.rb'
+# Layout/ExtraSpacing:
+#   Exclude:
+#     - 'db/migrate/20220118085641_sorcery_core.rb'
+#     - 'db/migrate/20220118092847_create_scores.rb'
 
 # Offense count: 1
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: AllowForAlignment.
-Layout/SpaceBeforeFirstArg:
-  Exclude:
-    - 'db/migrate/20220118085641_sorcery_core.rb'
+# Layout/SpaceBeforeFirstArg:
+#   Exclude:
+#     - 'db/migrate/20220118085641_sorcery_core.rb'
 
 # Offense count: 2
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: EnforcedStyle, EnforcedStyleForEmptyBrackets.
 # SupportedStyles: space, no_space, compact
 # SupportedStylesForEmptyBrackets: space, no_space
-Layout/SpaceInsideArrayLiteralBrackets:
-  Exclude:
-    - 'config/environments/production.rb'
+# Layout/SpaceInsideArrayLiteralBrackets:
+#   Exclude:
+#     - 'config/environments/production.rb'
 
 # Offense count: 2
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: EnforcedStyle, EnforcedStyleForEmptyBraces.
 # SupportedStyles: space, no_space, compact
 # SupportedStylesForEmptyBraces: space, no_space
-Layout/SpaceInsideHashLiteralBraces:
-  Exclude:
-    - 'app/models/score.rb'
+# Layout/SpaceInsideHashLiteralBraces:
+#   Exclude:
+#     - 'app/models/score.rb'
 
 # Offense count: 6
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: final_newline, final_blank_line
-Layout/TrailingEmptyLines:
-  Exclude:
-    - 'app/controllers/application_controller.rb'
-    - 'app/models/score.rb'
-    - 'app/models/user.rb'
-    - 'db/seeds.rb'
-    - 'spec/support/capybara.rb'
-    - 'spec/support/login_macros.rb'
+# Layout/TrailingEmptyLines:
+#   Exclude:
+#     - 'app/controllers/application_controller.rb'
+#     - 'app/models/score.rb'
+#     - 'app/models/user.rb'
+#     - 'db/seeds.rb'
+#     - 'spec/support/capybara.rb'
+#     - 'spec/support/login_macros.rb'
 
 # Offense count: 6
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: AllowInHeredoc.
-Layout/TrailingWhitespace:
-  Exclude:
-    - 'app/controllers/score_details_controller.rb'
-    - 'app/controllers/users_controller.rb'
-    - 'app/models/user.rb'
-    - 'config/initializers/sorcery.rb'
-    - 'spec/system/users_spec.rb'
+# Layout/TrailingWhitespace:
+#   Exclude:
+#     - 'app/controllers/score_details_controller.rb'
+#     - 'app/controllers/users_controller.rb'
+#     - 'app/models/user.rb'
+#     - 'config/initializers/sorcery.rb'
+#     - 'spec/system/users_spec.rb'
 
 # Offense count: 1
 # Configuration parameters: AllowComments, AllowEmptyLambdas.
