--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "@rails/ujs": "^6.1.5",
     "@rails/webpacker": "5.4.3",
+    "babel-eslint": "^10.1.0",
     "bootstrap": "4.6.1",
     "date-fns": "^2.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.2",
     "get-haversine-distance": "^1.0.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
@@ -14,6 +17,8 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "webpack-dev-server": "^3"
   }
 }
