--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "remodal": "^1.1.1",
+    "throttle-debounce": "^5.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
